syntax = "proto3";
package nl.svsticky.chroma;

message BatchDeletePhotosRequest {
  repeated string ids = 1;
}